# Pangolin

./: .gitignore  CMakeLists.txt  fips-include.cmake  fips.yml
include/pangolin/display/device/: display_glut.h
include/pangolin/gl/: glinclude.h
src/: CMakeLists.txt
src/display/device/: display_glut.cpp
src/image/: image_io.cpp
src/video/drivers/: ffmpeg.cpp
test/: CMakeLists.txt
test/log/: CMakeLists.txt
